--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,6 @@
-VITE_FIREBASE_API_KEY=
-VITE_FIREBASE_AUTH_DOMAIN=
-VITE_FIREBASE_PROJECT_ID=
-VITE_FIREBASE_STORAGE_BUCKET=
-VITE_FIREBASE_MESSAGING_SENDER_ID=
-VITE_FIREBASE_APP_ID=
+VITE_FIREBASE_API_KEY="AIzaSyACrgd6OVE7l4TdmDRfmqK3V12OBZvUXbo"
+VITE_FIREBASE_AUTH_DOMAIN="sleep-app-4.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="sleep-app-4"
+VITE_FIREBASE_STORAGE_BUCKET="sleep-app-4.firebasestorage.app"
+VITE_FIREBASE_MESSAGING_SENDER_ID="795505543519"
+VITE_FIREBASE_APP_ID="1:795505543519:web:e833c5109d60d68f6d0eea"
